--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ nav a {
 #mission {
     position: relative;
     padding-top: 20px;
-    background-image: url("file:///Users/jaredmcdowall/Desktop/Personal/Programming/Current%20Projects/Project%20-%20Pet%20Adoption/Resources/Images/liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg");
+    background-image: url("./liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg");
     height: 800px;
     width: auto;
     background-size: cover;
