--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ nav a {
     position: relative;
     padding-top: 20px;
     background-image: url("liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg");
-    height: 800px;
+    height: 100vh;
     width: auto;
     background-size: cover;
     background-repeat: no-repeat;
