--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -54,7 +54,7 @@ nav a {
 #mission {
     position: relative;
     padding-top: 20px;
-    background-image: url("liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg");
+    background-image: url("./Images/Animals/liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg");
     height: 100vh;
     width: auto;
     background-size: cover;
