--- a/Styles/apply.css
+++ b/Styles/apply.css
@@ -52,7 +52,7 @@ nav a {
 #banner {
     position: relative;
     padding-top: 20px;
-    background-image: url("liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg");
+    background-image: url('/Images/Animals/liudmyla-denysiuk-iJ9o00UeAWk-unsplash(2).jpg');
     height: 100vh;
     width: auto;
     background-size: cover;
